# lacuna-db

./: .dockerignore  .gitignore  Dockerfile  LICENCE  README.md  build-db.sh  create-views.sql  curl-impersonate-v1.0.0rc1.x86_64-linux-gnu.tar.gz.126  curl-impersonate-v1.0.0rc2.x86_64-linux-gnu.tar.gz.8  devenv.nix  docker-compose.yml  fly.toml  hearings.json  metadata.json  metadata.yml  pyproject.toml  test.bb
app/: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
curl-impersonate-v1.0.0rc1.x86_64-linux-gnu/: curl-impersonate  curl_chrome101  curl_chrome120  curl_chrome123  curl_chrome124  curl_chrome131  curl_chrome99_android  curl_edge101  curl_firefox133  curl_firefox135  curl_safari15_5
curl-impersonate-v1.0.0rc2.x86_64-linux-gnu/: curl_chrome100  curl_chrome104  curl_chrome107  curl_chrome110  curl_chrome116  curl_chrome119  curl_chrome131_android  curl_chrome133a  curl_chrome99  curl_edge99  curl_firefox133  curl_firefox135  curl_safari15_3  curl_safari17_0  curl_safari17_2_ios  curl_safari18_0  curl_safari18_0_ios
data/: fc-judgments.json  hearings.json  lss-dt-reports.json  metadata.yml  pdpc-decisions.json  pdpc-undertakings.hash  pdpc-undertakings.json  sal-specialists.json  sc.json  telco-fbo.json
docker/: dev.Dockerfile  dev.docker-compose.yml  prod.Dockerfile  prod.docker-compose.yml
frontend/: .eslintignore  .eslintrc.js  .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
input/: get_hearings.bb  install_deps.bb  populate_hearing_data.bb  run.bb  utils.bb
scripts/: build-db.bb  (+8 more)
(+56 files in other folders)
