[tool.poetry]
name = "lacuna-db"
version = "0.0.1"
description = ""
authors = ["Huey <hello@huey.xyz>"]
license = "EUPL-1.2"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
git-history = "0.7a0"
b2 = "^3.10.1"
sqlite-utils = "^3.35.1"
ocrmypdf = "^15.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
